change styles, add icons

--- a/src/client/components/Admin/TableWorkers/RefactorWorkers.less
+++ b/src/client/components/Admin/TableWorkers/RefactorWorkers.less
@@ -29,7 +29,7 @@
       }
 
       tr:first-child {
-        background-color: #f1efe4;
+        background-color: rgba(169, 169, 169, 0.04);
         height: 50px;
         border-bottom: none;
       }
@@ -52,7 +52,7 @@
       }
 
       th:nth-child(5) {
-        width: 120px;
+        width: 100px;
       }
 
       td {
@@ -85,12 +85,12 @@
           height: 28px;
           padding: 0;
           border: none;
-          background-color: #f1efe4;
           font-size: 13px;
           color: black;
           cursor: pointer;
           outline: none;
-          border-right: 1px solid #e6e6e2;
+          background-color: inherit;
+          border-left: 1px solid rgba(105, 105, 105, 0.65);
         }
 
         a > button {
@@ -98,13 +98,11 @@
           height: 28px;
           padding: 0;
           border: none;
-          background-color: #f1efe4;
+          background-color: inherit;
           font-size: 13px;
           color: black;
           cursor: pointer;
           outline: none;
-          border-left: 1px solid #e6e6e2;
-          border-right: 1px solid #e6e6e2;
         }
       }
     }
@@ -134,12 +132,12 @@
   &__numbers-pages {
     display: flex;
     width: 97.7%;
-    background-color: #f1efe4;
-    border-top: 1px solid #bfbfbf;
-    border-bottom: 1px solid #b4b4b4;
     height: 30px;
     align-items: center;
     justify-content: center;
+    border: 1px solid #bfbfbf;
+    background-color: rgba(0, 0, 0, 0.03);
+    border-radius: 10px;
 
     div {
       width: 25px;
@@ -174,15 +172,16 @@
     a > button {
       right: 0;
       height: 100%;
-      width: 120px;
+      width: 110px;
       padding: 0;
-      color: inherit;
+      border: none;
+      font: inherit;
+      color: black;
       cursor: pointer;
-      background-color: #f1efe4;
+      background-color: rgba(238, 238, 228, 0.51);
       outline: none;
       border: 1px solid #b9b9b5;
-      border-top: none;
-      color: black;
+      border-radius: 10px;
     }
   }
 }
