--- a/src/client/components/App/Header/header.less
+++ b/src/client/components/App/Header/header.less
@@ -13,14 +13,14 @@
   border-bottom-left-radius: 10px;
 
   .container-logo {
-    flex: 0 1 270px;
-    min-width: 265px;
+    flex: 0 1 220px;
+    min-width: 225px;
     align-items: center;
-    margin-left: 15px;
+    margin-left: 30px;
     display: flex;
     cursor: pointer;
     background: url(../../../image/logo.png) no-repeat left;
-    background-size: 280px 87px;
+    background-size: 220px 75px;
   }
 
   .container-user {
@@ -28,9 +28,11 @@
     display: flex;
     align-items: center;
     justify-content: flex-end;
+    font-weight: 500;
+    font-size: 17px;
 
     &__user {
-      margin-right: 25px;
+      margin-right: 40px;
       height: 30px;
       width: 160px;
       display: flex;
@@ -47,6 +49,9 @@
   .container-buttons {
     flex: 0 0 220px;
     display: flex;
+    font-family: Verdana;
+    font-weight: 500;
+    font-size: 18px;
 
     button {
       border-bottom-right-radius: 10px;
@@ -59,7 +64,7 @@
       cursor: pointer;
       background-color: @headerColor;
       outline: none;
-      border-left: 1px solid #aeb5b9;
+      border-left: 1px solid #a9b0b4;
       border-right: 1px solid #e6e6e2;
     }
 
@@ -89,7 +94,7 @@
     }
 
     button:hover {
-      background-color: #f1f1f1;
+      background-color: rgb(226, 227, 241);
     }
   }
 }
