--- a/src/client/components/App/LoginForm/LoginForm.less
+++ b/src/client/components/App/LoginForm/LoginForm.less
@@ -1,12 +1,12 @@
 .login-form {
   position: relative;
-  top: 15vh;
+  top: 20vh;
   margin: auto;
-  width: 420px;
-  height: 350px;
-  background-color: white;
+  width: 350px;
+  height: 320px;
+  background-color: #f5f5eb;
   border: 2px solid #b5b5b5;
-  border-radius: 10px;
+  border-radius: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -15,7 +15,7 @@
     text-align: center;
     width: 100%;
     padding-top: 35px;
-    margin-bottom: 35px;
+    margin-bottom: 25px;
     font-size: 20px;
     position: relative;
 
@@ -29,7 +29,7 @@
       border: none;
       color: inherit;
       cursor: pointer;
-      background-color: white;
+      background-color: inherit;
       outline: none;
       font-size: 30px;
       color: black;
@@ -66,18 +66,19 @@
     }
 
     & > button {
-      margin-top: 30px;
-      width: 100px;
-      height: 30px;
+      margin-top: 25px;
+      height: 35px;
+      width: 110px;
       padding: 0;
       border: none;
+      font: inherit;
       color: inherit;
-      font-size: 14px;
       cursor: pointer;
-      background-color: rgba(221, 235, 200, 0.69);
+      background-color: #eeeee4;
       outline: none;
-      border: 1px solid rgba(55, 69, 62, 0.49);
-      border-radius: 5px;
+      border: 1px solid #9f9f9f;
+      border-radius: 10px;
+      font-size: 16px;
     }
 
     & > button:hover {
