--- a/src/client/components/ModalWindow/ModalWindow.less
+++ b/src/client/components/ModalWindow/ModalWindow.less
@@ -1,9 +1,9 @@
 .modal-info__text {
   position: relative;
   top: 15vh;
-  width: 390px;
-  height: 250px;
-  background-color: #fffdfe;
+  width: 350px;
+  height: 220px;
+  background-color: #f5f5eb;
   border: 2px solid #b5b5b5;
   box-shadow: 0 0 10px rgba(0,0,0,0.5);
   border-radius: 20px;
@@ -14,8 +14,8 @@
   &__info {
     position: absolute;
     top: 40%;
-    width: 330px;
-    left: 30px;
+    width: 320px;
+    padding-left: 15px;
     text-align: center;
   }
 
@@ -23,13 +23,13 @@
     position: absolute;
     height: 30px;
     width: 30px;
-    top: 12px;
+    top: 15px;
     right: 15px;
     padding: 0;
     border: none;
     color: inherit;
     cursor: pointer;
-    background-color: #fffdfe;
+    background-color: inherit;
     outline: none;
     font-size: 30px;
     color: black;
@@ -44,8 +44,8 @@
   &__errors {
     position: absolute;
     top: 32%;
-    width: 330px;
-    left: 30px;
+    width: 320px;
+    padding-left: 15px;
     text-align: center;
 
     div {
