--- a/src/client/style/App.less
+++ b/src/client/style/App.less
@@ -6,6 +6,7 @@ body {
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
+    font-family: Verdana;
 }
 .app {
     width: 100%;
@@ -96,23 +97,23 @@ body {
 }
 
 ::-webkit-scrollbar{
-    border-color: rgba(255, 171, 109, 0.76);
+    border-color: rgba(0, 4, 41, 0.29);
     width: 14px;
-    background-color: rgba(205, 214, 173, 0.7);
+    background-color: rgba(0, 4, 41, 0.05);
 }
 ::-webkit-scrollbar-thumb{
     border-width:1px 1px 1px 2px;
-    border-color: rgba(255, 171, 109, 0.76);
-    background-color: rgba(167, 176, 142, 0.9);
+    border-color: rgba(0, 4, 41, 0.40);
+    background-color: rgba(0, 4, 41, 0.09);
 }
 ::-webkit-scrollbar-thumb:hover{
     border-width: 1px 1px 1px 2px;
-    border-color: #555;
-    background-color: rgba(167, 176, 142, 0.9);
+    border-color: rgba(0, 4, 41, 0.40);
+    background-color: rgba(0, 4, 41, 0.10);
 }
 ::-webkit-scrollbar-track{
     border-width:0;
 }
 ::-webkit-scrollbar-track:hover{
-    background-color: rgba(178, 187, 150, 0.7);
+    background-color: rgba(0, 4, 41, 0.05);
 }
