--- a/src/client/components/Admin/TableCities/RefactorCities.less
+++ b/src/client/components/Admin/TableCities/RefactorCities.less
@@ -29,9 +29,8 @@
       }
 
       tr:first-child {
-        background-color: #f1efe4;
+        background-color: rgba(169, 169, 169, 0.04);
         height: 50px;
-        border-bottom: none;
       }
 
       th:nth-child(1) {
@@ -44,7 +43,7 @@
       }
 
       th:nth-child(3) {
-        width: 120px;
+        width: 100px;
       }
 
       td {
@@ -67,12 +66,12 @@
           height: 28px;
           padding: 0;
           border: none;
-          background-color: #f1efe4;
           font-size: 13px;
           color: black;
           cursor: pointer;
           outline: none;
-          border-right: 1px solid #e6e6e2;
+          background-color: inherit;
+          border-left: 1px solid rgba(105, 105, 105, 0.65);
         }
 
         a > button {
@@ -80,13 +79,11 @@
           height: 28px;
           padding: 0;
           border: none;
-          background-color: #f1efe4;
+          background-color: inherit;
           font-size: 13px;
           color: black;
           cursor: pointer;
           outline: none;
-          border-left: 1px solid #e6e6e2;
-          border-right: 1px solid #e6e6e2;
         }
       }
     }
@@ -95,12 +92,12 @@
   &__numbers-pages {
     display: flex;
     width: 97.7%;
-    background-color: #f1efe4;
-    border-top: 1px solid #bfbfbf;
-    border-bottom: 1px solid #b4b4b4;
     height: 30px;
     align-items: center;
     justify-content: center;
+    border: 1px solid #bfbfbf;
+    background-color: rgba(0, 0, 0, 0.03);
+    border-radius: 10px;
 
     div {
       width: 25px;
@@ -133,17 +130,17 @@
     flex-direction: row-reverse;
 
     a > button {
-
       height: 100%;
-      width: 120px;
+      width: 110px;
       padding: 0;
-      color: inherit;
+      border: none;
+      font: inherit;
+      color: black;
       cursor: pointer;
-      background-color: #f1efe4;
+      background-color: rgb(225, 225, 225);
       outline: none;
       border: 1px solid #b9b9b5;
-      border-top: none;
-      color: black;
+      border-radius: 10px;
     }
   }
 }
