--- a/src/client/components/App/ChooseWorker/ChooseWorker.less
+++ b/src/client/components/App/ChooseWorker/ChooseWorker.less
@@ -85,7 +85,7 @@
     }
 
     &__worker:hover {
-      background-color: #d5d3c8;
+      background-color: rgba(213, 211, 200, 0.46);
     }
 
     .active{
@@ -110,7 +110,7 @@
       font: inherit;
       color: inherit;
       cursor: pointer;
-      background-color: #ffffff;
+      background-color: #eeeee4;
       outline: none;
       border: 1px solid #b5b5b5;
       border-radius: 4px;
