--- a/src/client/components/App/OrderForm/OrderForm.less
+++ b/src/client/components/App/OrderForm/OrderForm.less
@@ -42,18 +42,19 @@
   }
 
   &__order-form > button {
+    letter-spacing: 1px;
     margin-top: 17px;
     height: 40px;
-    width: 120px;
+    width: 110px;
     padding: 0;
     border: none;
     font: inherit;
     color: inherit;
     cursor: pointer;
-    background-color: #ffffff;
+    background-color: #eeeee4;
     outline: none;
     border: 1px solid #9f9f9f;
-    border-radius: 8px;
+    border-radius: 10px;
     font-size: 16px;
   }
 
