fix style, add icon logout

--- a/src/client/components/Admin/RefactorClients/RefactorClients.less
+++ b/src/client/components/Admin/RefactorClients/RefactorClients.less
@@ -4,7 +4,7 @@
   margin: auto;
   width: 340px;
   height: 310px;
-  background-color: white;
+  background-color: #f4f4ea;
   border: 2px solid #b5b5b5;
   box-shadow: 0 0 10px rgba(0,0,0,0.5);
   border-radius: 20px;
@@ -31,7 +31,7 @@
       border: none;
       color: inherit;
       cursor: pointer;
-      background-color: white;
+      background-color: inherit;
       outline: none;
       font-size: 30px;
       color: black;
@@ -61,23 +61,23 @@
     }
 
     & > button {
+      height: 35px;
       margin-top: 25px;
-      width: 100px;
-      height: 30px;
+      width: 110px;
+      font-size: 15px;
       padding: 0;
       border: none;
-      color: inherit;
-      font-size: 14px;
+      font: inherit;
+      color: black;
       cursor: pointer;
-      background-color: rgba(221, 235, 200, 0.69);
       outline: none;
-      border: 1px solid rgba(55, 69, 62, 0.49);
-      border-radius: 5px;
+      border: 1px solid #b9b9b5;
+      border-radius: 10px;
+      background-color: rgba(236, 236, 232, 0.8);
     }
 
     & > button:hover {
-      border: 1px solid rgba(55, 69, 62, 0.56);
-      background-color: rgba(234, 248, 213, 0.67);
+      background-color: rgba(226, 226, 222, 0.8);
     }
   }
 }
