--- a/src/client/components/App/Header/header.less
+++ b/src/client/components/App/Header/header.less
@@ -47,7 +47,7 @@
   }
 
   .container-buttons {
-    flex: 0 0 220px;
+    flex: 0 0 100px;
     display: flex;
     font-family: Verdana;
     font-weight: 500;
@@ -66,6 +66,10 @@
       outline: none;
       border-left: 1px solid #a9b0b4;
       border-right: 1px solid #e6e6e2;
+
+      .MuiSvgIcon-root {
+        font-size: 30px;
+      }
     }
 
     a {
