--- a/src/client/components/App/LoginForm/LoginForm.less
+++ b/src/client/components/App/LoginForm/LoginForm.less
@@ -4,7 +4,7 @@
   margin: auto;
   width: 350px;
   height: 320px;
-  background-color: #f5f5eb;
+  background-color: #f4f4ea;
   border: 2px solid #b5b5b5;
   border-radius: 20px;
   display: flex;
@@ -74,7 +74,7 @@
       font: inherit;
       color: inherit;
       cursor: pointer;
-      background-color: #eeeee4;
+      background-color: #f2f2e8;
       outline: none;
       border: 1px solid #9f9f9f;
       border-radius: 10px;
