--- a/src/client/components/App/OrderForm/OrderForm.less
+++ b/src/client/components/App/OrderForm/OrderForm.less
@@ -9,7 +9,7 @@
   &__title {
     text-align: center;
     padding-top: 30px;
-    margin-bottom: 17px;
+    margin-bottom: 19px;
     font-size: 20px;
   }
 
@@ -43,7 +43,7 @@
 
   &__order-form > button {
     letter-spacing: 1px;
-    margin-top: 17px;
+    margin-top: 15px;
     height: 40px;
     width: 110px;
     padding: 0;
@@ -51,7 +51,7 @@
     font: inherit;
     color: inherit;
     cursor: pointer;
-    background-color: #eeeee4;
+    background-color: #f2f2e8;
     outline: none;
     border: 1px solid #9f9f9f;
     border-radius: 10px;
