--- a/src/client/components/ModalWindow/ModalWindow.less
+++ b/src/client/components/ModalWindow/ModalWindow.less
@@ -1,9 +1,9 @@
 .modal-info__text {
   position: relative;
   top: 15vh;
-  width: 350px;
+  width: 370px;
   height: 220px;
-  background-color: #f5f5eb;
+  background-color: #f4f4ea;
   border: 2px solid #b5b5b5;
   box-shadow: 0 0 10px rgba(0,0,0,0.5);
   border-radius: 20px;
@@ -15,7 +15,7 @@
     position: absolute;
     top: 40%;
     width: 320px;
-    padding-left: 15px;
+    padding-left: 25px;
     text-align: center;
   }
 
@@ -45,7 +45,7 @@
     position: absolute;
     top: 32%;
     width: 320px;
-    padding-left: 15px;
+    padding-left: 25px;
     text-align: center;
 
     div {
