--- a/src/client/components/Admin/TableCities/RefactorCities.less
+++ b/src/client/components/Admin/TableCities/RefactorCities.less
@@ -19,7 +19,6 @@
     table {
       border-collapse: collapse;
       width: 100%;
-
       flex: 1;
 
       tr {
@@ -137,10 +136,14 @@
       font: inherit;
       color: black;
       cursor: pointer;
-      background-color: rgb(225, 225, 225);
       outline: none;
       border: 1px solid #b9b9b5;
       border-radius: 10px;
+      background-color: rgba(236, 236, 232, 0.8);
+    }
+
+    a > button:hover {
+      background-color: rgba(225, 225, 221, 0.8);
     }
   }
 }
