--- a/src/client/components/Admin/TableWorkers/RefactorWorkers.less
+++ b/src/client/components/Admin/TableWorkers/RefactorWorkers.less
@@ -178,10 +178,14 @@
       font: inherit;
       color: black;
       cursor: pointer;
-      background-color: rgba(238, 238, 228, 0.51);
       outline: none;
       border: 1px solid #b9b9b5;
       border-radius: 10px;
+      background-color: rgba(236, 236, 232, 0.8);
+    }
+
+    a > button:hover {
+      background-color: rgba(225, 225, 221, 0.8);
     }
   }
 }
