--- a/src/client/components/App/ChooseWorker/ChooseWorker.less
+++ b/src/client/components/App/ChooseWorker/ChooseWorker.less
@@ -110,7 +110,7 @@
       font: inherit;
       color: inherit;
       cursor: pointer;
-      background-color: #eeeee4;
+      background-color: #f2f2e8;
       outline: none;
       border: 1px solid #b5b5b5;
       border-radius: 4px;
