--- a/src/client/components/App/OrderForm/OrderForm.less
+++ b/src/client/components/App/OrderForm/OrderForm.less
@@ -1,70 +1,146 @@
-.main-form {
-  flex: 0 0 300px;
-  border: 1px solid rgba(128, 128, 128, 0.4);
-  border-radius: 5px;
-  background-color: #f5f5eb;
-  box-shadow: 0 0 10px rgba(0,0,0,0.5);
-  position: relative;
-
-  &__title {
-    text-align: center;
-    padding-top: 30px;
-    margin-bottom: 19px;
-    font-size: 20px;
-  }
-
-  &__order-form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  &__order-form > .main-form__order-select {
-    width: 100%;
-    text-align: center;
+@media screen and (min-width:600px) {
+  .main-form {
+    flex: 0 0 300px;
+    border: 1px solid rgba(128, 128, 128, 0.4);
+    border-radius: 5px;
+    background-color: #f5f5eb;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     position: relative;
-    height: 60px;
 
-    label {
+    &__title {
+      text-align: center;
+      padding-top: 30px;
+      margin-bottom: 19px;
+      font-size: 20px;
+    }
+
+    &__order-form {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    &__order-form > .main-form__order-select {
+      width: 100%;
+      text-align: center;
+      position: relative;
+      height: 60px;
+
+      label {
+        font-size: 14px;
+        position: absolute;
+        left: 17%;
+        color: #212121;
+      }
+
+      select {
+        width: 70%;
+        height: 33px;
+        margin-top: 20px;
+        border-radius: 5px;
+        border: 1px solid gray;
+      }
+    }
+
+    &__order-form > button {
+      letter-spacing: 1px;
+      margin-top: 15px;
+      height: 40px;
+      width: 110px;
+      padding: 0;
+      border: none;
+      font: inherit;
+      color: inherit;
+      cursor: pointer;
+      background-color: #f2f2e8;
+      outline: none;
+      border: 1px solid #9f9f9f;
+      border-radius: 10px;
+      font-size: 16px;
+    }
+
+    .choosing-master {
+      width: 100%;
+      height: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      position: relative;
+      flex-direction: column;
+    }
+  }
+}
+
+@media screen and (max-width:600px) {
+  .main-form {
+    flex: 0 0 450px;
+    border-radius: 5px;
+    background-color: #f5f5eb;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    position: relative;
+
+    &__title {
+      text-align: center;
+      padding-top: 25px;
+      margin-bottom: 5px;
+      font-size: 15px;
+    }
+
+    &__order-form {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding-bottom: 25px;
+    }
+
+    &__order-form > .main-form__order-select {
+      width: 100%;
+      text-align: center;
+      position: relative;
+      height: 60px;
+
+      label {
+        font-size: 14px;
+        position: absolute;
+        left: 17%;
+        color: #212121;
+      }
+
+      select {
+        width: 70%;
+        height: 33px;
+        margin-top: 20px;
+        border-radius: 5px;
+        border: 1px solid gray;
+      }
+    }
+
+    &__order-form > button {
+      letter-spacing: 1px;
+      margin-top: 15px;
+      height: 40px;
+      width: 110px;
+      padding: 0;
+      border: none;
+      font: inherit;
+      color: inherit;
+      cursor: pointer;
+      background-color: #f2f2e8;
+      outline: none;
+      border: 1px solid #9f9f9f;
+      border-radius: 10px;
       font-size: 14px;
-      position: absolute;
-      left: 17%;
-      color: #212121;
     }
 
-    select {
-      width: 70%;
-      height: 33px;
-      margin-top: 20px;
-      border-radius: 5px;
-      border: 1px solid gray;
+    .choosing-master {
+      width: 100%;
+      height: 100%;
+      display: flex;
+      padding-top: 30%;
+      align-items: center;
+      justify-content: center;
+      position: relative;
+      flex-direction: column;
     }
-  }
-
-  &__order-form > button {
-    letter-spacing: 1px;
-    margin-top: 15px;
-    height: 40px;
-    width: 110px;
-    padding: 0;
-    border: none;
-    font: inherit;
-    color: inherit;
-    cursor: pointer;
-    background-color: #f2f2e8;
-    outline: none;
-    border: 1px solid #9f9f9f;
-    border-radius: 10px;
-    font-size: 16px;
-  }
-
-  .choosing-master {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-    flex-direction: column;
   }
 }
