--- a/src/client/components/NoMatch/NoMatch.less
+++ b/src/client/components/NoMatch/NoMatch.less
@@ -1,55 +1,117 @@
-.main-no-match {
-  flex: 1;
-  height: 87vh;
-  margin-top: 5px;
-  margin-bottom: 5px;
-  min-width: 695px;
-  display: flex;
-  flex-direction: column;
-  background-color: #f5f5eb;
-  border: 1px solid rgba(128, 128, 128, 0.4);
-  box-shadow: 0 0 10px rgba(0,0,0,0.5);
-  border-radius: 5px;
-  justify-content: center;
-  align-items: center;
+@media screen and (min-width:600px) {
+  .main-no-match {
+    flex: 1;
+    height: 87vh;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    min-width: 695px;
+    display: flex;
+    flex-direction: column;
+    background-color: #f5f5eb;
+    border: 1px solid rgba(128, 128, 128, 0.4);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    border-radius: 5px;
+    justify-content: center;
+    align-items: center;
 
 
-  &__logo {
-    width: 80px;
-    height: 80px;
-    background: url(../../image/notFound.png) no-repeat;
-    margin-bottom: 30px;
+    &__logo {
+      width: 80px;
+      height: 80px;
+      background: url(../../image/notFound.png) no-repeat;
+      margin-bottom: 30px;
+    }
+
+    &__text {
+      font-size: 20px;
+      width: 100%;
+      text-align: center;
+      margin-bottom: 120px;
+    }
   }
 
-  &__text {
-    font-size: 20px;
+  .main-no-match-admin {
+    height: 100%;
     width: 100%;
-    text-align: center;
-    margin-bottom: 120px;
+    display: flex;
+    flex-direction: column;
+    background-color: #f5f5eb;
+    justify-content: center;
+    align-items: center;
+
+
+    &__logo {
+      width: 80px;
+      height: 80px;
+      background: url(../../image/notFound.png) no-repeat;
+      margin-bottom: 30px;
+    }
+
+    &__text {
+      font-size: 20px;
+      width: 100%;
+      text-align: center;
+      margin-bottom: 120px;
+    }
   }
 }
 
-.main-no-match-admin {
-  height: 100%;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  background-color: #f5f5eb;
-  justify-content: center;
-  align-items: center;
+
+@media screen and (max-width:600px) {
+  .main-no-match {
+    flex: 1;
+    height: 87vh;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    width: calc(100vw - (100vw - 100%));
+    min-width: 430px;
+    display: flex;
+    flex-direction: column;
+    background-color: #f5f5eb;
+    border-radius: 5px;
+    justify-content: center;
+    align-items: center;
 
 
-  &__logo {
-    width: 80px;
-    height: 80px;
-    background: url(../../image/notFound.png) no-repeat;
-    margin-bottom: 30px;
+    &__logo {
+      width: 80px;
+      height: 80px;
+      background: url(../../image/notFound.png) no-repeat;
+      margin-bottom: 30px;
+    }
+
+    &__text {
+      font-size: 20px;
+      width: 100%;
+      text-align: center;
+      margin-bottom: 120px;
+    }
   }
 
-  &__text {
-    font-size: 20px;
+  .main-no-match-admin {
+    height: 100%;
     width: 100%;
-    text-align: center;
-    margin-bottom: 120px;
+    display: flex;
+    flex-direction: column;
+    background-color: #f5f5eb;
+    justify-content: center;
+    align-items: center;
+
+
+    &__logo {
+      width: 80px;
+      height: 80px;
+      background: url(../../image/notFound.png) no-repeat;
+      margin-bottom: 30px;
+    }
+
+    &__text {
+      font-size: 20px;
+      width: 100%;
+      text-align: center;
+      margin-bottom: 120px;
+    }
   }
 }
+
+
