--- a/src/client/style/App.less
+++ b/src/client/style/App.less
@@ -2,97 +2,143 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background: radial-gradient(circle farthest-corner at 50px 50px, #FBF2EB, #006a70);    font-family: Geneva, Arial, Helvetica, sans-serif;
+    background: radial-gradient(circle farthest-corner at 50px 50px, #FBF2EB, #009fa5);
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
     font-family: Verdana;
 }
-.app {
-    width: 100%;
-    height: 100%;
-    position: relative;
-}
 
-.app-admin {
-
-    a > button {
-        font-size: 50px;
-        position: absolute;
-        right: 0;
-        height: 95vh;
-        width: 10vw;
-        padding: 0;
-        border: none;
-        color: inherit;
-        cursor: pointer;
-        background-color: rgba(255, 253, 241, 0);
-        outline: none;
-        color: #f5f5eb;
+@media screen and (min-width:600px) {
+    .app {
+        width: 100vw;
+        height: 100vh;
+        position: relative;
     }
 
-    a:first-child > button {
-        left: 0;
+    .app-main {
+        display: flex;
+        flex-direction: column;
+        width: 80%;
+        height: 100%;
+        margin: auto;
     }
-}
 
-.app-main {
-    display: flex;
-    flex-direction: column;
-    width: 80%;
-    height: 100vh;
-    margin: auto;
-}
-
-.main {
-    flex: 1;
-    margin-bottom: 5px;
-    margin-top: 5px;
-    display: flex;
-    min-width: 695px;
+    .main {
+        flex: 1;
+        margin-bottom: 5px;
+        margin-top: 5px;
+        display: flex;
+        min-width: 695px;
 
 
-    .content {
-        flex: 2 1 66%;
-        border: 1px solid rgba(128, 128, 128, 0.4);
-        box-shadow: 0 0 10px rgba(0,0,0,0.5);
-        border-radius: 5px;
-        border-bottom-left-radius: 10px;
-        border-bottom-top-radius: 10px;
-        background: url(../image/background.png) no-repeat right -10px bottom -10px;
-        background-size: 450px 300px;
-        background-color:  #f5f5eb;
+        .content {
+            flex: 2 1 66%;
+            border: 1px solid rgba(128, 128, 128, 0.4);
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+            border-radius: 5px;
+            border-bottom-left-radius: 10px;
+            border-bottom-top-radius: 10px;
+            background: url(../image/background.png) no-repeat right -10px bottom -10px;
+            background-size: 450px 300px;
+            background-color: #f5f5eb;
+            display: flex;
+            align-items: center;
+            margin-left: 5px;
+        }
+    }
+
+    .footer {
+        height: 30px;
+        width: 100%;
+        min-width: 695px;
         display: flex;
         align-items: center;
-        margin-left: 5px;
+        justify-content: center;
+        background-color: rgb(230, 231, 245);
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+        border-left: 1px solid rgba(128, 128, 128, 0.4);
+        border-top: 1px solid rgba(128, 128, 128, 0.4);
+        border-right: 1px solid rgba(128, 128, 128, 0.4);
+        border-top-right-radius: 5px;
+        border-top-left-radius: 5px;
+
+        a {
+            padding-left: 50px;
+            padding-right: 50px;
+            color: black;
+            font-size: 14px;
+        }
+
+        a:nth-child(2) {
+            border-left: 1px solid #babab0;
+            border-right: 1px solid #babab0;
+        }
     }
 }
 
-.footer {
-    height: 30px;
-    width: 100%;
-    min-width: 695px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: rgb(230, 231, 245);
-    box-shadow: 0 0 10px rgba(0,0,0,0.5);
-    border-left: 1px solid rgba(128, 128, 128, 0.4);
-    border-top: 1px solid rgba(128, 128, 128, 0.4);
-    border-right: 1px solid rgba(128, 128, 128, 0.4);
-    border-top-right-radius: 5px;
-    border-top-left-radius: 5px;
-
-    a {
-        padding-left: 50px;
-        padding-right: 50px;
-        color: black;
-        font-size: 14px;
+@media screen and (max-width:600px) {
+    .app {
+        height: 100vh;
+        width: calc(100vw - (100vw - 100%));
+        position: relative;
     }
 
-    a:nth-child(2) {
-        border-left: 1px solid #babab0;
-        border-right: 1px solid #babab0;
+    body {
+        font-size: 13px;
+    }
+    .app-main {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        min-width: 430px;
+        height: 100%;
+    }
+
+    .main {
+        flex: 1;
+        margin-bottom: 5px;
+        margin-top: 5px;
+        display: flex;
+        flex-direction: column-reverse;
+
+        .content {
+            flex: 0 0 450px;
+            border-radius: 5px;
+            border-bottom-left-radius: 10px;
+            border-bottom-top-radius: 10px;
+            background: url(../image/background.png) no-repeat right -10px bottom -10px;
+            background-size: 240px 160px;
+            background-color: #f5f5eb;
+            display: flex;
+            margin-bottom: 5px;
+        }
+    }
+
+    .footer {
+        height: 35px;
+        max-height: 35px;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: rgb(230, 231, 245);
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+        border-top: 1px solid rgba(128, 128, 128, 0.4);
+        border-top-right-radius: 5px;
+        border-top-left-radius: 5px;
+
+        a {
+            padding-left: 50px;
+            padding-right: 50px;
+            color: black;
+            font-size: 14px;
+        }
+
+        a:nth-child(2) {
+            border-left: 1px solid #babab0;
+            border-right: 1px solid #babab0;
+        }
     }
 }
 
