--- a/src/client/components/App/Header/header.less
+++ b/src/client/components/App/Header/header.less
@@ -5,6 +5,7 @@
     flex: 0 0 60px;
     background-color: @headerColor;
     width: 100%;
+    min-width: 410px;
     display: flex;
     border-bottom: 1px solid rgba(128, 128, 128, 0.4);
     border-bottom-right-radius: 10px;
