add global variables, optimization style code

--- a/src/client/components/App/Header/header.less
+++ b/src/client/components/App/Header/header.less
@@ -1,9 +1,9 @@
-@headerColor: rgb(230, 231, 245);
+@import './global-variable.less';
 
 @media screen and (max-width:600px) {
   .header {
     flex: 0 0 60px;
-    background-color: @headerColor;
+    background-color: @header-color;
     width: 100%;
     min-width: 410px;
     display: flex;
@@ -61,7 +61,7 @@
         font: inherit;
         color: inherit;
         cursor: pointer;
-        background-color: @headerColor;
+        background-color: @header-color;
         outline: none;
         border-left: 1px solid #a9b0b4;
 
@@ -89,7 +89,7 @@
         font: inherit;
         color: inherit;
         cursor: pointer;
-        background-color: @headerColor;
+        background-color: @header-color;
         outline: none;
         border-left: 1px solid #e6e6e2;
 
@@ -105,7 +105,7 @@
 @media screen and (min-width:600px) {
   .header {
     flex: 0 0 80px;
-    background-color: @headerColor;
+    background-color: @header-color;
     min-width: 695px;
     display: flex;
     border-left: 1px solid rgba(128, 128, 128, 0.4);
@@ -165,7 +165,7 @@
         font: inherit;
         color: inherit;
         cursor: pointer;
-        background-color: @headerColor;
+        background-color: @header-color;
         outline: none;
         border-left: 1px solid #a9b0b4;
         border-right: 1px solid #e6e6e2;
@@ -194,7 +194,7 @@
         font: inherit;
         color: inherit;
         cursor: pointer;
-        background-color: @headerColor;
+        background-color: @header-color;
         outline: none;
         border-left: 1px solid #e6e6e2;
 
