--- a/src/client/components/App/HomePage/HomePage.less
+++ b/src/client/components/App/HomePage/HomePage.less
@@ -1,21 +1,29 @@
+@import '../../../style/global-variable.less';
+
+.home-page {
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+
+  &__welcome {
+    letter-spacing: 0.4px;
+    line-height: 2;
+    text-indent: 20px;
+  }
+
+  &__instruction {
+    letter-spacing: 0.2px;
+    line-height: 2;
+  }
+}
+
 @media screen and (min-width:600px) {
   .home-page {
     width: 85%;
     height: 90%;
-    margin: auto;
-    display: flex;
-    flex-direction: column;
 
     &__welcome {
       padding-top: 20px;
-      letter-spacing: 0.4px;
-      line-height: 2;
-      text-indent: 20px;
-    }
-
-    &__instruction {
-      letter-spacing: 0.2px;
-      line-height: 2;
     }
   }
 }
@@ -24,20 +32,6 @@
   .home-page {
     width: 85%;
     height: 100%;
-    margin: auto;
-    display: flex;
-    flex-direction: column;
-
-    &__welcome {
-      letter-spacing: 0.4px;
-      line-height: 2;
-      text-indent: 20px;
-    }
-
-    &__instruction {
-      letter-spacing: 0.2px;
-      line-height: 2;
-    }
   }
 }
 
