--- a/src/client/style/global-variable.less
+++ b/src/client/style/global-variable.less
@@ -1,7 +1,9 @@
 @app-background-color: radial-gradient(circle farthest-corner at 50px 50px, #FBF2EB, #009fa5);
+@mobile-app-background-color: #eecca0;
 @tables-color: #f5f5eb;
 @footer-color: rgb(230, 231, 245);
 @header-color: rgb(230, 231, 245);
+@image-background: url(../image/background.png) no-repeat right -10px bottom -10px;
 
 @app-border-style: 1px solid rgba(128, 128, 128, 0.4);
 
