--- a/src/client/components/App/ChooseWorker/ChooseWorker.less
+++ b/src/client/components/App/ChooseWorker/ChooseWorker.less
@@ -1,122 +1,128 @@
+@import '../../../style/global-variable.less';
+
+.choose-worker {
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+
+  .buttonHome {
+    font-size: 50px;
+    position: absolute;
+    left: 0;
+   
+    padding: 0;
+    border: none;
+    color: inherit;
+    cursor: pointer;
+    outline: none;
+  }
+
+  &__header {
+    width: 100%;
+    height: 10%;
+    text-align: center;
+    font-size: 20px;
+  }
+
+  &__table {
+    width: 92%;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    border-top: 2px solid #b5b5b5;
+    border-bottom: 2px solid #b5b5b5;
+    overflow: auto;
+    
+    &__worker {
+      width: 94%;
+      height: 60px;
+      margin-left: 10px;
+      display: flex;
+      box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
+      border-radius: 5px;
+
+      .worker-image {
+        width: 45px;
+        height: 45px;
+        margin: auto;
+        background-color: #212121;
+        margin-left: 15px;
+      }
+
+      .worker-info {
+        flex: 1 1 100px;
+        margin-left: 15px;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+
+        &__name {
+          height: 20px;
+          padding-top: 10px;
+          width: 70%;
+        }
+
+        &__city {
+          height: 25px;
+          width: 70%;
+          font-size: 13px;
+        }
+
+        &__rating {
+          height: 60px;
+          padding-top: 10px;
+          text-align: right;
+          padding-right: 20px;
+        }
+      }
+    }
+
+    &__worker:hover {
+      background-color: rgba(213, 211, 200, 0.46);
+    }
+
+    .active {
+      background-color: rgba(0, 45, 121, 0.21);
+    }
+  }
+
+  &__button-confirm {
+    margin-bottom: 10px;
+    position: relative;
+    height: 10%;
+
+    button {
+      position: absolute;
+      left: 35px;
+      bottom: 5px;
+      height: 35px;
+      width: 90px;
+      padding: 0;
+      border: none;
+      font: inherit;
+      color: inherit;
+      cursor: pointer;
+      background-color: #f2f2e8;
+      outline: none;
+      border: 1px solid #b5b5b5;
+      border-radius: 4px;
+    }
+  }
+}
+
 @media screen and (max-width:600px) {
   .choose-worker {
     width: 440px;
     height: 410px;
-    margin: auto;
-    display: flex;
-    flex-direction: column;
 
     .buttonHome {
-      font-size: 50px;
-      position: absolute;
       top: 65px;
-      left: 0;
       height: 450px;
       width: 40px;
-      padding: 0;
-      border: none;
-      color: inherit;
-      cursor: pointer;
       background-color: rgba(158, 158, 158, 0.1);
-      outline: none;
       color: rgba(132, 130, 138, 0.58);
       z-index: 3;
-    }
-
-    &__header {
-      width: 100%;
-      height: 10%;
-      text-align: center;
-      font-size: 20px;
-
-    }
-
-    &__table {
-      width: 92%;
-      flex: 1;
-      display: flex;
-      flex-direction: column;
-      margin: auto;
-      border-top: 2px solid #b5b5b5;
-      border-bottom: 2px solid #b5b5b5;
-      overflow: auto;
-
-
-      &__worker {
-        width: 94%;
-        height: 60px;
-        margin-left: 10px;
-        display: flex;
-        box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
-        border-radius: 5px;
-
-        .worker-image {
-          width: 45px;
-          height: 45px;
-          margin: auto;
-          background-color: #212121;
-          margin-left: 15px;
-        }
-
-        .worker-info {
-          flex: 1 1 100px;
-          margin-left: 15px;
-          display: flex;
-          flex-direction: column;
-          flex-wrap: wrap;
-
-          &__name {
-            height: 20px;
-            padding-top: 10px;
-            width: 70%;
-          }
-
-          &__city {
-            height: 25px;
-            width: 70%;
-            font-size: 13px;
-          }
-
-          &__rating {
-            height: 60px;
-            padding-top: 10px;
-            text-align: right;
-            padding-right: 20px;
-          }
-        }
-      }
-
-      &__worker:hover {
-        background-color: rgba(213, 211, 200, 0.46);
-      }
-
-      .active {
-        background-color: rgba(0, 45, 121, 0.21);
-      }
-    }
-
-    &__button-confirm {
-      margin-bottom: 10px;
-      position: relative;
-      height: 10%;
-
-
-      button {
-        position: absolute;
-        left: 35px;
-        bottom: 5px;
-        height: 35px;
-        width: 90px;
-        padding: 0;
-        border: none;
-        font: inherit;
-        color: inherit;
-        cursor: pointer;
-        background-color: #f2f2e8;
-        outline: none;
-        border: 1px solid #b5b5b5;
-        border-radius: 4px;
-      }
     }
   }
 }
@@ -125,120 +131,13 @@
   .choose-worker {
     width: 85%;
     height: 90%;
-    margin: auto;
-    display: flex;
-    flex-direction: column;
 
     .buttonHome {
-      font-size: 50px;
-      position: absolute;
       top: 0;
-      left: 0;
       height: 95vh;
       width: 10vw;
-      padding: 0;
-      border: none;
-      color: inherit;
-      cursor: pointer;
       background-color: rgba(255, 253, 241, 0);
-      outline: none;
       color: #f5f5eb;
-    }
-
-    &__header {
-      width: 100%;
-      height: 10%;
-      text-align: center;
-      font-size: 20px;
-
-    }
-
-    &__table {
-      width: 92%;
-      flex: 1;
-      display: flex;
-      flex-direction: column;
-      margin: auto;
-      border-top: 2px solid #b5b5b5;
-      border-bottom: 2px solid #b5b5b5;
-      overflow: auto;
-
-
-      &__worker {
-        width: 94%;
-        height: 60px;
-        margin-left: 10px;
-        display: flex;
-        box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
-        border-radius: 5px;
-
-        .worker-image {
-          width: 45px;
-          height: 45px;
-          margin: auto;
-          background-color: #212121;
-          margin-left: 15px;
-        }
-
-        .worker-info {
-          flex: 1 1 100px;
-          margin-left: 15px;
-          display: flex;
-          flex-direction: column;
-          flex-wrap: wrap;
-
-          &__name {
-            height: 20px;
-            padding-top: 10px;
-            width: 70%;
-          }
-
-          &__city {
-            height: 25px;
-            width: 70%;
-            font-size: 13px;
-          }
-
-          &__rating {
-            height: 60px;
-            padding-top: 10px;
-            text-align: right;
-            padding-right: 20px;
-          }
-        }
-      }
-
-      &__worker:hover {
-        background-color: rgba(213, 211, 200, 0.46);
-      }
-
-      .active {
-        background-color: rgba(0, 45, 121, 0.21);
-      }
-    }
-
-    &__button-confirm {
-      margin-bottom: 10px;
-      position: relative;
-      height: 10%;
-
-
-      button {
-        position: absolute;
-        left: 35px;
-        bottom: 5px;
-        height: 35px;
-        width: 90px;
-        padding: 0;
-        border: none;
-        font: inherit;
-        color: inherit;
-        cursor: pointer;
-        background-color: #f2f2e8;
-        outline: none;
-        border: 1px solid #b5b5b5;
-        border-radius: 4px;
-      }
     }
   }
 }
