starting styled admin interface for mobile

--- a/src/client/components/Admin/Bar/AdminBar.less
+++ b/src/client/components/Admin/Bar/AdminBar.less
@@ -92,7 +92,7 @@
       a {
         flex: 1;
         width: 100px;
-        heigth: 40px;
+        height: 40px;
         border-left: 1px solid #9da79d;
 
         .button-bar {
